draft big picture course goals (ATS-AST style)

--- a/HB/HB 3115-Exodus and Moses.tex
+++ b/HB/HB 3115-Exodus and Moses.tex
@@ -39,24 +39,20 @@ particularly as it relates to different accounts of Israel’s origins in
 the Hebrew Bible/Old Testament.
 
 }% end of course description
-\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+\objectives{%
 
-By the end of the course students should be able to:
-	name;
-	give;
-	contrast;
-	locate;
-	understand;
-	recognize;
-	list;
-	articulate;
-	defend;
-	classify;
-	report on;
-	memorize.
-
-Students should also be able to \ldots
-
+By the end of the course students should be able to demonstrate a
+critical awareness of the main contours of the Book of Exodus and, to a
+more limited extent, of its modern interpretation and ancient reception
+history. They should be able to communicate their own understanding of
+who Moses is, with an ecumenical outlook that includes some knowledge of
+Jewish and Christian tradition. They should develop a critical
+self-awareness of their own patterns of thought about biblical story and
+biblical law, particularly where these elements converge on the figure
+of Moses. Ideally, they will discover in the study of Old Testament
+scripture a genuine love of learning, all due humility before the task
+of interpretation, and the courage to address themselves to text and
+tradition.
 
 % ATS-AST Goals and Assessment Tool
 %
@@ -82,6 +78,19 @@ Students should also be able to \ldots
 %
 % Rubric for Assessment: Needs Work; Satisfactory; Doing Well
 
+Students should also be able to:
+	name;
+	give;
+	contrast;
+	locate;
+	understand;
+	recognize;
+	list;
+	articulate;
+	defend;
+	classify;
+	report on;
+	discern.
 
 % A Model of Learning Objectives
 % Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
@@ -136,6 +145,7 @@ Students should also be able to \ldots
 %
 % If you reference a List of Measurable Verbs Used to Assess Learning
 % Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
+
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -324,7 +334,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	sight of the text itself. The paper should be 1,500 words long, and
 	it is due on the sixth day of class.
 
-	\item A \textbf{final paper} gives students an opportunity to
+	\item A \textbf{final thesis} gives students an opportunity to
 	develop their own answer to the question “Who is Moses?” The paper
 	must have a clear thesis, which should govern the entire discussion.
 	The paper should also show an awareness of all assigned readings and
