reorganize course goals: big picture, then more specific

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -33,24 +33,9 @@
 The First Testament of Christian Scripture, also called the \ldots
 
 }% end of course description
-\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+\objectives{%
 
-By the end of the course students should be able to:
-	name;
-	give;
-	contrast;
-	locate;
-	understand;
-	recognize;
-	list;
-	articulate;
-	defend;
-	classify;
-	report on;
-	memorize.
-
-Students should also be able to \ldots
-
+By the end of the course students should be able to demonstrate \ldots
 
 % ATS-AST Goals and Assessment Tool
 %
@@ -76,6 +61,19 @@ Students should also be able to \ldots
 %
 % Rubric for Assessment: Needs Work; Satisfactory; Doing Well
 
+Students should also be able to:
+	name;
+	give;
+	contrast;
+	locate;
+	understand;
+	recognize;
+	list;
+	articulate;
+	defend;
+	classify;
+	report on;
+	discern.
 
 % A Model of Learning Objectives
 % Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
@@ -130,6 +128,7 @@ Students should also be able to \ldots
 %
 % If you reference a List of Measurable Verbs Used to Assess Learning
 % Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
+
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -320,7 +319,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	sight of the text itself. The paper should be 1,500 words long, and
 	it is due on the sixth day of class.
 
-	\item A \textbf{final paper} gives students an opportunity to
+	\item A \textbf{final thesis} gives students an opportunity to
 	develop their own answer to the question “Who is Moses?” The paper
 	must have a clear thesis, which should govern the entire discussion.
 	The paper should also show an awareness of all assigned readings and
