--- a/HB/HB 3115-Exodus and Moses.tex
+++ b/HB/HB 3115-Exodus and Moses.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[0.6-DRAFT]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
+\coursecode[0.8-DRAFT]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
 \coursetitle{Exodus and the Life of Moses}% \cmd[optional series]{title}
 
 % Taught in:
@@ -79,18 +79,10 @@ tradition.
 % Rubric for Assessment: Needs Work; Satisfactory; Doing Well
 
 Students should also be able to:
-	name;
-	give;
-	contrast;
-	locate;
-	understand;
-	recognize;
-	list;
-	articulate;
-	defend;
-	classify;
-	report on;
-	discern.
+	summarize and understand major hermeneutical approaches to the Pentateuch;
+	identify, analyze, and explicate suitably short biblical passages, especially from Exodus;
+	appreciate, compare, and evaluate traditional religious understandings of the text;
+	generate and defend an original, coherent thesis about Moses.
 
 % A Model of Learning Objectives
 % Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
@@ -293,30 +285,6 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \subsection{Grade Structure for \ccode}
 \label{structure}
 
-% ATS-AST Goals and Assessment Tool
-%
-% 1. Substantial grounding in critical analytical skills central to
-% theological disciplines and their contemporary practice: biblical,
-% theological, pastoral;
-%
-% 2. Cultivate excellence in practices of communicating faith that
-% bridge traditional and contemporary styles, genres, and media;
-%
-% 3. Inculcating habits of bringing critical self-awareness and
-% social-awareness to pastoral leadership, fostering virtues crucial in
-% times of foundational change such as, ingenuity, compassion and
-% courage;
-%
-% 4. Nurture a committed love of learning and spiritual formation
-% understood as integral to pastoral professional practice.
-%
-% Religious Heritage (Standard A, Section 3.1.1), Cultural Context
-% (Standard A, Section 3.1.2), Personal and Spiritual Formation
-% (Standard A, Section 3.1.3), and Capacity for Ministerial and Public
-% Leadership (Standard A, Section 3.1.4)
-%
-% Rubric for Assessment: Needs Work; Satisfactory; Doing Well
-
 \begin{enumerate}
 
 	\item A \textbf{book review} will facilitate student reflection on a
@@ -340,12 +308,6 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	The paper should also show an awareness of all assigned readings and
 	any relevant lectures and classroom discussions. It should be 2,000
 	words long, and it is due at the start of the last class.
-
-%\Int{
-%	\item Each student will \textbf{make an online presentation} \ldots
-%}{
-%	\item Each student will \textbf{lead a seminar} on \ldots
-%}
 
 \end{enumerate}
 
