final version (1.0) of HB 3115

--- a/HB/HB 3115-Exodus and Moses.tex
+++ b/HB/HB 3115-Exodus and Moses.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[0.8-DRAFT]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
+\coursecode[1.0]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
 \coursetitle{Exodus and the Life of Moses}% \cmd[optional series]{title}
 
 % Taught in:
@@ -26,7 +26,7 @@
 \semester{Summer Term 2018}
 \meets{Mon–Fri, July 2–13}% \meets{on}{at}{in}
       {9:00--12:00 \AM}
-      {TBD}
+      {Classroom 2}
 \website{danieldriver.com/courses/}
 \cdescription{% \cmd[standard prereqs]{from the current Academic Calendar}
 
@@ -80,8 +80,8 @@ tradition.
 
 Students should also be able to:
 	summarize and understand major hermeneutical approaches to the Pentateuch;
-	identify, analyze, and explicate suitably short biblical passages, especially from Exodus;
-	appreciate, compare, and evaluate traditional religious understandings of the text;
+	identify, analyze, and explicate short passages from it, especially from Exodus;
+	appreciate, compare, and evaluate modern and traditional religious understandings of the text;
 	generate and defend an original, coherent thesis about Moses.
 
 % A Model of Learning Objectives
@@ -216,12 +216,12 @@ biblical studies alike.
 \begin{thebibliography}{9}% use the longest item in the bibliography
 
 	\bibitem{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
-	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}. 2nd ed.
-	Oxford: OUP, 2015. % ISBN 978-0199010349.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
+	3rd ed. Don Mills, ON: Oxford University Press, 2019. ISBN 978-0199026838.
 
 	\bibitem{sbl2} Collins, Billie Jean, et al.
-	\emph{The SBL Handbook of Style}. 2nd ed.
-	Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
+	\emph{The SBL Handbook of Style}.
+	2nd ed. Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
 	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
 	which is the standard at AST, there is also a free
 	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
@@ -255,21 +255,21 @@ the needs of the class.
 		& Exodus 1--2  & \bsc{Intros} &               &  2 Jul. \\ % or \Int{14}{12} Sep.
 		& Exodus 3     & \bsc{IV}     & \gvr{1–44}    &  3 Jul. \\
 		& Exodus 7     & \bsc{VII}    & \gvr{45–87}   &  4 Jul. \\
-	\reminder{First paper is \textbf{due} by midnight on day three}{} \\
 		& Exodus 12    & \bsc{VIII}   &               &  5 Jul. \\
+	\reminder{The first paper is \textbf{due by midnight} on day four.}{} \\
 		& Exodus 16    & \bsc{XII}    & \bds{1–26}    &  6 Jul. \\ [1ex]
 
 	\noclass{Term Break (Saturday \& Sunday)}         &         \\ [1ex]
 
-		& Exodus 19    & \bsc{XVI}    & \bds{27–98}   &  9 Jul. \\
-	\reminder{Second paper is \textbf{due} by midnight on day six}{} \\
-		& Exodus 24    & \bsc{XIX}    & \bds{99–187}  & 10 Jul. \\
-		& Exodus 32    & \bsc{XXI}    & \bds{188–251} & 11 Jul. \\
+		& Exodus 19    & \bsc{XVI}    & \bds{27–75}   &  9 Jul. \\
+		& Exodus 24    & \bsc{XIX}    & \bds{75–98}   & 10 Jul. \\
+	\reminder{The second paper is \textbf{due by midnight} on day seven.}{} \\
+		& Exodus 32    & \bsc{XXI}    & \bds{99–146}  & 11 Jul. \\
 		& Exodus 33    & \bsc{XXII}   & \nys{1–68}    & 12 Jul. \\
-	\reminder{Final paper is \textbf{due} before the start of the last class}{} \\
+	\reminder{The intro to the final thesis is \textbf{due by the start} of the last class.}{} \\
 		& Exodus 34    & \bsc{XXIII}  & \nys{69–132}  & 13 Jul. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for this course}{27 Jul.} \\
+	\reminder{End of Term: Final marks are due for this course.}{27 Jul.} \\
 
 	\bottomrule
   \end{tabular}
@@ -291,7 +291,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	work of biblical interpretation, in this case by \cite{vonrad}. Note
 	that a book review is not the same thing as a book report. At least
 	half of this paper should be devoted to analysis and evaluation. Its
-	total length should be 1,000 words, and it is due on the third day
+	total length should be 1,000 words, and it is due on the fourth day
 	of class.
 
 	\item An \textbf{exegetical essay} will facilitate direct engagement
@@ -300,14 +300,16 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	analysis and explication of it. Interact with \cite{childs} and at
 	least one other commentator as you work, but be sure not to loose
 	sight of the text itself. The paper should be 1,500 words long, and
-	it is due on the sixth day of class.
+	it is due on the seventh day of class.
 
 	\item A \textbf{final thesis} gives students an opportunity to
 	develop their own answer to the question “Who is Moses?” The paper
 	must have a clear thesis, which should govern the entire discussion.
-	The paper should also show an awareness of all assigned readings and
-	any relevant lectures and classroom discussions. It should be 2,000
-	words long, and it is due at the start of the last class.
+	The paper should also show an awareness of the readings, lectures,
+	and classroom discussions. It should be 2,000 words long, the first
+	500 of which are due for oral delivery at the start of the last
+	class. Let this introduction feature a single-sentence thesis
+	statement. The full paper is due at the end of the last day.
 
 \end{enumerate}
 
