--- a/HB/HB 3115-Exodus and Moses.tex
+++ b/HB/HB 3115-Exodus and Moses.tex
@@ -31,12 +31,12 @@
 \cdescription{% \cmd[standard prereqs]{from the current Academic Calendar}
 
 Who is Moses, and what does his life have to do with Israel’s exodus
-from Egypt? This course will examine the Moses story in the context of
-the Book of Exodus, attending above all to the book’s canonical shape
-and its historic reception. Students will also become familiar with some
-of the current debate about the formation of the Pentateuch,
-particularly as it relates to different accounts of Israel’s origins in
-the Hebrew Bible/Old Testament.
+from Egypt and God's giving of the Law at Mount Sinai? This course will
+examine the Moses story in the context of the Book of Exodus, attending
+above all to the book’s canonical shape and its historic reception.
+Students will also become familiar with some of the current debate about
+the formation of the Pentateuch, particularly as it relates to different
+accounts of Israel’s origins in the Hebrew Bible/Old Testament.
 
 }% end of course description
 \objectives{%
