tidy up, clarify some phrasing

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -7,9 +7,9 @@
 
 % Typography
 \usepackage{fontspec,realscripts}
-\defaultfontfeatures{Ligatures=TeX}
-\setromanfont[Numbers=OldStyle]{Arno Pro}
-\setsansfont[Numbers=OldStyle]{Scala Sans Pro}
+\defaultfontfeatures{Ligatures=TeX,Numbers=OldStyle}
+\setromanfont[]{Arno Pro}
+\setsansfont[Scale=MatchLowercase]{Scala Sans Pro}
 \setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
@@ -21,7 +21,6 @@
 
 \begin{document}
 \maketitle
-
 
 \section{Make an Argument}
 
@@ -63,14 +62,15 @@ has different rationales in the Old Testament, is radically transformed
 by Jesus in the New Testament, and yet interest in the topic seems to be
 growing as Christians struggle to find rest and renewal in their busy
 lives.” The problem with this thesis is that it commits the writer to
-several different topics: (1) rationales for sabbath observance in
-ancient Israel, (2) the transformation of sabbath practices in the early
-Church, and (3) contemporary accounts of spirituality that may have as
-much in common with therapeutic self-help literature as with traditional
+several different
+topics:\marginpar{\raggedright\sffamily\itshape\footnotesize Homework:
+rewrite this\\thesis.} (1) rationales for sabbath observance in ancient
+Israel, (2) the transformation of sabbath practices in the early Church,
+and (3) contemporary accounts of spirituality that may have as much in
+common with therapeutic self-help literature as with traditional
 religious devotion. When a thesis uses a coordinating sentence,
 containing two or more parts, it is important that all of the parts are
 closely related so that the focus of the paper is not diffused.
-[\emph{For homework: rewrite this thesis.}]
 
 Third, a good thesis is \textbf{precise}, meaning that when it is read,
 it can only have one interpretation. Vague words should be avoided. And
@@ -112,10 +112,10 @@ at least four opportunities over the semester to apply that energy to
 the humble paragraph. Paragraphs are the building blocks of essays, and
 it takes experience to know how to identify a paragraph-sized idea and
 then nurture it into a form that can help support a larger argument. Use
-the forum to practice. Learn to develop a robust, 250-word unit governed
-by a clear topic sentence, which is a thesis in miniature: compose a
-single, well-ordered paragraph in answer to four or more discussion
-prompts this term.
+the forum to practice. Learn to develop a robust unit of thought
+governed by a clear topic sentence, which is a thesis in miniature:
+compose a single, well-ordered paragraph in answer to four or more
+discussion prompts this term.
 
 \subsection{The Review (Book or Article)}
 
@@ -135,11 +135,10 @@ of its significance. It should have the following elements:
 \item an introductory hook (a phatic or attention-getting device).
 
 \item a summary of the work and its arguments. You should describe the
-main argument in your own words and through the judicious
-use of quotes. Your aim should be to be objective (would the author
-recognize your summary of their work? is it fair?) and insightful (do
-you capture the work's central points?). Please avoid critical
-comment at this stage.
+main argument in your own words and through the judicious use of quotes.
+Try to be objective (would the author recognize your summary of their
+work? is it fair?) and insightful (do you capture the work's central
+points?). Please avoid critical comment at this stage.
 
 \item an analysis and evaluation of the work, possibly through
 discussion of a representative example. If the scholar's focus is
@@ -166,8 +165,8 @@ before you can make an argument about it.
 Unless the professor or syllabus states otherwise, at least half of the
 paper (50\%) should be evaluative. Mere plot summary is not required. In
 the case of an assigned text, unlike a review that might appear in
-print, you can assume that your audience is already somewhat familiar
-with the work.
+print, you can assume that your audience is already at least somewhat
+familiar with the work.
 
 \subsection{The Exegetical Essay}
 
@@ -181,7 +180,7 @@ method that applies universally. I took a few courses on the Bible when
 I was an undergraduate. In one I remember being presented with an
 authoritative list of steps for exegesis – I believe there were twelve
 steps in all. At the time, as a student of English Literature, the
-hermeneutical program struck me as artless. It felt far too formulaic.
+hermeneutical program struck me as artless. It was far too formulaic.
 Now that I have looked into the matter more thoroughly, I have become
 convinced that all such schemes are artificial. They might serve a
 purpose for a time and a place, but they cannot guarantee excellent
@@ -197,7 +196,7 @@ confidence about your favourite approach to the Bible, the first step
 might be to take a dose of humility. Walk through a world class
 theological research library, if you get the chance, and marvel at just
 how much has been written about the Bible over the centuries. If, on the
-other had, you find yourself duly intimidated by the task, I commend the
+other hand, you find yourself daunted by the challenge, I commend the
 steps outlined in \emph{Making Sense in Religious Studies} as a
 reasonable and practical place to start.\footnote{For details on these
 eight steps see Northey, Anderson, and Lohr, \emph{Making Sense},
@@ -242,15 +241,14 @@ argument, is often a culminating work in a degree program. I regularly
 set a question that calls for a final thesis as the culminating
 assignment of a course as well. It requires all the things that have
 been described above: a sound thesis statement, mature and topical
-supporting paragraphs, an exegetical foundation, and a competent
-awareness of secondary literature. My main advice is to write and
-rewrite. Leaving most of the work to the night before a deadline is no
-recipe for success. Give yourself as much time as you can to revise your
-work, knowing that our understanding of text, church, and world is
-always a work in progress.
+supporting paragraphs, competence in secondary literature, and a solid
+exegetical foundation. My main advice is to write and rewrite. Leaving
+most of the work to the night before a deadline is no recipe for
+success. Give yourself as much time as you can to revise your work,
+knowing that writing is a rigorous process. It takes serious effort to
+make prose appear effortless.
 
 \section{Try the Paramedic Method}
-
 
 Handout copied from - https://owl.english.purdue.edu/owl/resource/635/01/
 
