columnify that handout

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -1,9 +1,12 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
-\documentclass[11pt]{article}
-\usepackage{geometry}
-\geometry{letterpaper,margin=1in}
+\documentclass[11pt,twocolumn]{article}
+\usepackage[letterpaper]{geometry}
+\geometry{%
+%margin=1in,
+scale=0.8,
+columnsep=0.25in}
 
 % Typography
 \usepackage{fontspec,realscripts}
@@ -16,7 +19,11 @@
 \frenchspacing
 
 \title{Guidelines for Papers and Other Written Assignments}
-\author{Daniel R. Driver, PhD}
+\author{Daniel R. Driver, PhD\thanks{I would like to acknowledge my
+teachers. Two who might recognize echoes of their advice in what I set
+forth here are Jeffry C. Davis, who introduced me to composition theory,
+practice, and pedagogy, and Nathan MacDonald, who helped me see the use
+of setting an effective book review assignment.}}
 \date{}
 
 \begin{document}
@@ -24,7 +31,7 @@
 
 \section{Make an Argument}
 
-Academic writing aims to persuade. In this course, therefore, you are
+Academic writing aims to persuade. In my courses, therefore, you are
 asked to craft thoughtful, defensible arguments. Whether you are
 summarizing an article, conducting a book review, interpreting an
 ancient text, outlining a theological position, organizing historical
@@ -47,14 +54,14 @@ Bradford A. Anderson, and Joel N. Lohr, \emph{Making Sense in Religious
 Studies: A Student's Guide to Research and Writing}, 3rd ed. (Don Mills,
 ON: Oxford University Press, 2019), 64–66.}
 
-To be \textbf{restricted}, a thesis must limit the scope of an essay to
-what can be discussed in detail within the bounds of the paper's
-expected length. Whole monographs have been written on single psalms. It
-is simply not realistic to think that you can prove something about the
-entire Book of Psalms in twenty pages. A good thesis is narrow in focus.
-For example: “The divine warrior motif in Psalm 24:7–10 finds natural
-resonance in later Christian liturgies of Christ's Harrowing of Hell, as
-seen in the libretto of Handel's \emph{Messiah}.”
+First, to be \textbf{restricted}, a thesis must limit the scope of an
+essay to what can be discussed in detail within the bounds of the
+paper's expected length. Whole monographs have been written on single
+psalms. It is simply not realistic to think that you can prove something
+about the entire Book of Psalms in twenty pages. A good thesis is narrow
+in focus. For example: “The divine warrior motif in Psalm 24:7–10 finds
+natural resonance in later Christian liturgies of Christ's Harrowing of
+Hell, as seen in the libretto of Handel's \emph{Messiah}.”
 
 Second, a thesis must be \textbf{unified}; in other words, it must
 express only one idea. Consider the following sentence: “Sabbath keeping
@@ -62,12 +69,10 @@ has different rationales in the Old Testament, is radically transformed
 by Jesus in the New Testament, and yet interest in the topic seems to be
 growing as Christians struggle to find rest and renewal in their busy
 lives.” The problem with this thesis is that it commits the writer to
-several different
-topics:\marginpar{\raggedright\sffamily\itshape\footnotesize Homework:
-rewrite this\\thesis.} (1) rationales for sabbath observance in ancient
-Israel, (2) the transformation of sabbath practices in the early Church,
-and (3) contemporary accounts of spirituality that may have as much in
-common with therapeutic self-help literature as with traditional
+several different topics: (1) rationales for sabbath observance in
+ancient Israel, (2) the transformation of sabbath practices in the early
+Church, and (3) contemporary accounts of spirituality that may have as
+much in common with therapeutic self-help literature as with traditional
 religious devotion. When a thesis uses a coordinating sentence,
 containing two or more parts, it is important that all of the parts are
 closely related so that the focus of the paper is not diffused.
@@ -91,11 +96,16 @@ paper. Remember, while you do have some flexibility in the way you craft
 your thesis sentence, without a thesis that is restricted, unified, and
 precise, it is nearly impossible to have a good paper.
 
+\vfill
+
+{\noindent\itshape In class or at home: rewrite the poor thesis
+at the top of this column. Make it restricted, unified, and precise.}
+
 \section{Consider the Specific Assignment}
 
 Always refer to the syllabus for the exact parameters of your
 assignments in a given course. For general help with some common writing
-assignments in Dr. Driver's courses, see below.
+assignments in my courses, see below.
 
 \subsection{The Forum Post}
 
@@ -103,7 +113,7 @@ Does a 250-word forum post need to have a thesis? Not necessarily. A
 class forum is a fine place to experiment with creative approaches to
 big questions, so please feel free to try something unusual. Responses
 could take the form of a letter (to the editor, say), a dialogue (after
-Plato), an imitation of a literary genre (including those in scripture),
+Plato), an imitation of a literary genre (including those of scripture),
 a children's sermon, or anything else that occurs to you as a productive
 way to engage the question. Then again, the venue also gives you an
 audience of peers with which to hone your persuasive writing skills.
@@ -113,8 +123,8 @@ the humble paragraph. Paragraphs are the building blocks of essays, and
 it takes experience to know how to identify a paragraph-sized idea and
 then nurture it into a form that can help support a larger argument. Use
 the forum to practice. Learn to develop a robust unit of thought
-governed by a clear topic sentence, which is a thesis in miniature:
-compose a single, well-ordered paragraph in answer to four or more
+governed by a clear topic sentence, which is a thesis in miniature. How?
+Compose a single, well-ordered paragraph in answer to four or more
 discussion prompts this term.
 
 \subsection{The Review (Book or Article)}
@@ -130,9 +140,13 @@ of its significance. It should have the following elements:
 
 \begin{enumerate}
 
-\item full bibliographic details about the work under review.
+\item full bibliographic details about the work under review. Let the
+reference follow SBL Style. Parenthetical citations may follow, thus:
+“quote” (73).
 
-\item an introductory hook (a phatic or attention-getting device).
+\item an introductory hook (a phatic or attention-getting device). It
+will be quite short compared to the introductions most other papers
+require.
 
 \item a summary of the work and its arguments. You should describe the
 main argument in your own words and through the judicious use of quotes.
@@ -171,8 +185,8 @@ familiar with the work.
 \subsection{The Exegetical Essay}
 
 The basic task of an exegetical essay is to identify a suitable passage
-from the Bible (perhaps between four and eight verses long, and not more
-than ten), and to offer a reading of that text that supports an
+from the Bible (between four and eight verses long, and certainly not
+more than ten), and to offer a reading of it that supports an
 appropriate thesis.
 
 The biblical exegete needs a plan of attack. Unfortunately, I know of no
@@ -198,8 +212,8 @@ theological research library, if you get the chance, and marvel at just
 how much has been written about the Bible over the centuries. If, on the
 other hand, you find yourself daunted by the challenge, I commend the
 steps outlined in \emph{Making Sense in Religious Studies} as a
-reasonable and practical place to start.\footnote{For details on these
-eight steps see Northey, Anderson, and Lohr, \emph{Making Sense},
+reasonable and practical place to start.\footnote{For details on each of
+these eight steps see Northey, Anderson, and Lohr, \emph{Making Sense},
 105–112.}
 
 \begin{enumerate}
@@ -245,12 +259,10 @@ supporting paragraphs, competence in secondary literature, and a solid
 exegetical foundation. My main advice is to write and rewrite. Leaving
 most of the work to the night before a deadline is no recipe for
 success. Give yourself as much time as you can to revise your work,
-knowing that writing is a rigorous process. It takes serious effort to
-make prose appear effortless.
+knowing that writing is a rigorous process. It takes effort to make
+prose appear effortless.
 
 \section{Try the Paramedic Method}
-
-Handout copied from - https://owl.english.purdue.edu/owl/resource/635/01/
 
 Use the Paramedic Method (originally developed by Richard Lanham in
 \emph{Revising Prose}) to edit any kind of professional writing. Editing
@@ -258,18 +270,9 @@ your professional writing using the Paramedic Method will make your
 prose easier to read. Sentences that are easy to read are more
 persuasive and more user-centered.
 
-Professional writers understand the need for clear, concise prose. An
-industry standard for helping workplace writers achieve user-centered,
-persuasive, and clear prose is the Paramedic Method. When you use the
-Paramedic Method, you will reduce your word count by eliminating
-unnecessary words. The Paramedic Method also helps you activate your
-sentences by eliminating passive voice and redundancies. The Paramedic
-Method is an easy to learn, systematic way to make your sentences more
-persuasive and more user-centered.
-
-Follow the seven steps below to improve the readability of your sentences.
-
-\subsection{The Paramedic Method}
+See the Online Writing Lab (OWL) at Purdue University for details.
+Search for “Paramedic Method” or go to:
+https://owl.english.purdue.edu/owl/resource/635/01/
 
 \begin{enumerate}
 \item Circle the prepositions (of, in, about, for, onto, into)
@@ -281,27 +284,55 @@ Follow the seven steps below to improve the readability of your sentences.
 \item Eliminate any redundancies
 \end{enumerate}
 
-\subsection{Now You Try}
-
-Use the Paramedic Method in the sentences below to practice making your
-sentences more concise. After you use the Paramedic Method on these
-sentences, check your results against the sentences at the bottom of
-this handout.
-%[Removed. See the suggested answers online.]
-
-\begin{enumerate}
-\item The point I wish to make is that the employees working at this company are in need of a much better manager of their money.
-\item It is widely known that the engineers at Sandia Labs have become active participants in the Search and Rescue operations in most years.
-\item After reviewing the results of your previous research, and in light of the relevant information found within the context of the study, there is ample evidence for making important, significant changes to our operating procedures.
-\end{enumerate}
-
-Example Concise Solutions:
-
-\begin{enumerate}
-\item Employees at this company need a better money manager. (Original word count: 26. New word count: 10).
-\item In recent years, engineers at Sandia Labs have participated in the Search and Rescue operations. (Original word count: 24. New word count: 16).
-\item After reviewing the results of your research, and within the context of the study, we find evidence supporting significant changes in our operating procedures. (Original word count: 36. New word count: 25).
-\end{enumerate}
+%Professional writers understand the need for clear, concise prose. An
+%industry standard for helping workplace writers achieve user-centered,
+%persuasive, and clear prose is the Paramedic Method. When you use the
+%Paramedic Method, you will reduce your word count by eliminating
+%unnecessary words. The Paramedic Method also helps you activate your
+%sentences by eliminating passive voice and redundancies. The Paramedic
+%Method is an easy to learn, systematic way to make your sentences more
+%persuasive and more user-centered.
+%
+%Follow the seven steps below to improve the readability of your sentences.
+%
+%\subsection{The Paramedic Method}
+%
+%\begin{enumerate}
+%\item Circle the prepositions (of, in, about, for, onto, into)
+%\item Draw a box around the “is” verb forms
+%\item Ask, “Where's the action?”
+%\item Change the “action” into a simple verb
+%\item Move the doer into the subject (Who's kicking whom)
+%\item Eliminate any unnecessary slow wind-ups
+%\item Eliminate any redundancies
+%\end{enumerate}
+%
+%\subsection{Now You Try}
+%
+%Use the Paramedic Method in the sentences below to practice making your
+%sentences more concise. After you use the Paramedic Method on these
+%sentences, check your results against the sentences at the bottom of
+%this handout.
+%
+%\begin{enumerate}
+%\item The point I wish to make is that the employees working at this company are in need of a much better manager of their money.
+%\item It is widely known that the engineers at Sandia Labs have become active participants in the Search and Rescue operations in most years.
+%\item After reviewing the results of your previous research, and in light of the relevant information found within the context of the study, there is ample evidence for making important, significant changes to our operating procedures.
+%\end{enumerate}
+%
+%Example Concise Solutions:
+%
+%\begin{enumerate}
+%\item Employees at this company need a better money manager. (Original word count: 26. New word count: 10).
+%\item In recent years, engineers at Sandia Labs have participated in the Search and Rescue operations. (Original word count: 24. New word count: 16).
+%\item After reviewing the results of your research, and within the context of the study, we find evidence supporting significant changes in our operating procedures. (Original word count: 36. New word count: 25).
+%\end{enumerate}
+%
+%Copyright ©1995-2018 by The Writing Lab & The OWL at Purdue and Purdue
+%University. All rights reserved. This material may not be published,
+%reproduced, broadcast, rewritten, or redistributed without permission.
+%Use of this site constitutes acceptance of our terms and conditions of
+%fair use.
 
 
 \end{document}
